test/fails/bad_parsing/bad_name3.lgl
void main() {
    tag v1.0 is vec2;
}
